--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 
-	<div class="modal modal_active">
+	<div class="modal">
 		<div class="modal__container">
 			<button class="modal__close" aria-label="закрыть"></button>
 			<div class="modal__content">
@@ -103,13 +103,13 @@
 						<div class="order__field">
 							<h2 class="modal__title">Способ оплаты</h2>
 							<div class="order__buttons">
-								<button type="button" class="button button_alt">Онлайн</button>
-								<button type="button" class="button button_alt">При получении</button>
+								<button name = "card" type="button" class="button button_alt">Онлайн</button>
+								<button name = "cash" type="button" class="button button_alt">При получении</button>
 							</div>
 						</div>
 						<label class="order__field">
 							<span class="form__label modal__title">Адрес доставки</span>
-							<input class="form__input" type="text" placeholder="Введите адрес" />
+							<input name = "address" class="form__input" type="text" placeholder="Введите адрес" />
 						</label>
 					</div>
 					<div class="modal__actions">
@@ -128,11 +128,11 @@
 					<div class="order">
 						<label class="order__field">
 							<span class="form__label modal__title">Email</span>
-							<input class="form__input" type="text" placeholder="Введите Email" />
+							<input name = "email" class="form__input" type="text" placeholder="Введите Email" />
 						</label>
 						<label class="order__field">
 							<span class="form__label modal__title">Телефон</span>
-							<input class="form__input" type="text" placeholder="+7 (" />
+							<input name = "phone" class="form__input" type="text" placeholder="+7 (" />
 						</label>
 					</div>
 					<div class="modal__actions">
